hphp/hack/test/typecheck/higher_kinded_types/hk_disabled/hk_argument.php.exp
ERROR: File "hk_argument.php", line 3, characters 19-26:
`TX` is a type parameter. Type parameters cannot take type arguments (e.g. `TX<int>` isn't allowed) (Naming[2047])
