hphp/hack/test/typecheck/higher_kinded_types/hk_disabled/hk_argument.php
<?hh

function test<TX>(TX<bool> $x): void {}
